force-app/main/default/objects/leaseworks__Purchase_Agreement_Milestone__c/leaseworks__Purchase_Agreement_Milestone__c.object-meta.xml
<CustomObject>
    <description>Object is used to store list of Milestones on the Purchase agreement level</description>
    <label>Z_Unused_Purchase Agreement Milestones</label>
    <nameField>
        <label>PA Milestone ID</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Z_Unused_Purchase Agreement Milestones</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>