force-app/main/default/objects/leaseworks__Purchase_Agreement_Milestone__c/fields/leaseworks__Description__c.field-meta.xml
<CustomField>
    <fullName>leaseworks__Description__c</fullName>
    <description>Milestone description. Text should represent Milesone intention</description>
    <inlineHelpText>Milestone description. Text should represent Milesone intention</inlineHelpText>
    <label>Description</label>
    <length>180</length>
    <required>true</required>
    <type>Text</type>
</CustomField>