force-app/main/default/objects/leaseworks__Purchase_Agreement_Milestone__c/fields/leaseworks__Milestone_Date__c.field-meta.xml
<CustomField>
    <fullName>leaseworks__Milestone_Date__c</fullName>
    <description>Exact date of the Milestone if Months to Delivery is not used</description>
    <inlineHelpText>Exact date of the Milestone if Months to Delivery is not used</inlineHelpText>
    <label>Milestone Date</label>
    <type>Date</type>
</CustomField>