force-app/main/default/objects/leaseworks__Purchase_Agreement_Milestone__c/fields/leaseworks__Months_to_Delivery__c.field-meta.xml
<CustomField>
    <fullName>leaseworks__Months_to_Delivery__c</fullName>
    <description>Number of months before Delivery Date when the milestone is due</description>
    <inlineHelpText>Number of months before Delivery Date when the milestone is due</inlineHelpText>
    <label>Months to Delivery</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>