force-app/main/default/objects/leaseworks__Purchase_Agreement_Milestone__c/fields/leaseworks__PA_Milestone_Type__c.field-meta.xml
<CustomField>
    <fullName>leaseworks__PA_Milestone_Type__c</fullName>
    <label>PA Milestone Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Engine Substitution</fullName>
            </value>
            <value>
                <fullName>Model Substitution</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>