force-app/main/default/objects/leaseworks__Purchase_Agreement_Milestone__c/fields/leaseworks__Y_Hidden_Applicability_Type__c.field-meta.xml
<CustomField>
    <fullName>leaseworks__Y_Hidden_Applicability_Type__c</fullName>
    <label>_Applicability_Type</label>
    <length>255</length>
    <type>Text</type>
</CustomField>