force-app/main/default/objects/leaseworks__Purchase_Agreement_Milestone__c/validationRules/leaseworks__Months_to_Delivery_or_Date.validationRule-meta.xml
<ValidationRule>
    <fullName>leaseworks__Months_to_Delivery_or_Date</fullName>
    <active>true</active>
    <errorConditionFormula>AND(TEXT(leaseworks__Milestone_Date__c )&lt;&gt;&quot;&quot;, TEXT(leaseworks__Months_to_Delivery__c)  &lt;&gt;&quot;&quot;)</errorConditionFormula>
    <errorDisplayField>leaseworks__Milestone_Date__c</errorDisplayField>
    <errorMessage>Only one parameter is allowed: Milestone Date or Months to Delivery.
Please delete one and try to save again.</errorMessage>
</ValidationRule>